<resources>
    <string name="app_name">Java8DSugarDemos</string>
    <string name="btn_action_name">Test</string>
    <string name="lambdas_title">Lambdas</string>
    <string name="method_reference_title">Method References</string>
    <string name="step_over_text">Step-Over</string>
    <string name="step_in_text">Step-In</string>
    <string name="reference_to_static_method">Reference to Static Method</string>
    <string name="reference_to_constructor">Reference To Constructor</string>
    <string name="integer_list">Integer List</string>
    <string name="prime_numbers_using_lambda_form">Prime numbers using Lambda Form</string>
    <string name="prime_numbers_using_method_reference">Prime numbers using Method reference</string>
    <string name="square_root_using_lambda_form">Square root using Lambda form</string>
    <string name="square_root_using_constuctor_reference">Square root using Constuctor reference</string>

    <string name="translate_button_text">Translate</string>
    <string name="phoneword_label_text">Enter a phoneword:</string>
    <string name="default_text">1-855-ANDROID</string>
    <string name="call_button_text">Call</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_translate_log">Call Log</string>

    <string name="action_settings">Settings</string>
    <string name="call_log_button_text">Call Log</string>
    <string name="call_log_list_text">Numbers Called:</string>
    <string name="action_call_log">Call Log</string>

    <!-- Strings for Streams Test -->
    <string name="streams_filter_title">Testing filter in streams</string>
    <string name="streams_collector_title">Testing Collector and String Joiner</string>
    <string name="streams_flatmap_title">Testing FlatMaps</string>
    <string name="streams_test_title">Testing Stream Operations</string>
    <string name="test_parallel_stream_title">Test Parallel Stream</string>

    <!-- Strings for Interface Test -->
    <string name="default_interface_heading">Defaut and Static Interface Test</string>
    <string name="default_interface_test_title">Default Interface</string>
    <string name="static_interface_title">Static Interface</string>

</resources>
