<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samples.devtools.demo.features.StreamsTest">

    <TextView
        android:id="@+id/streams_test_view"
        android:layout_width="305dp"
        android:layout_height="41dp"
        android:text="@string/streams_test_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/streams_filter_view"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:text="@string/streams_filter_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/streams_test_view"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/streams_collector_view"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:text="@string/streams_collector_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/streams_filter_view"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/streams_flatmap_view"
        android:layout_width="109dp"
        android:layout_height="38dp"
        android:text="@string/streams_flatmap_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/streams_collector_view"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginStart="17dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <Button
        android:id="@+id/test_map_action"
        android:layout_width="81dp"
        android:layout_height="41dp"
        android:text="@string/btn_action_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/streams_flatmap_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/test_collector_action"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:text="@string/btn_action_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/streams_collector_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/test_filter_action"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:text="@string/btn_action_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/streams_filter_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        android:layout_marginEnd="14dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        app:layout_constraintGuide_end="17dp" />

    <TextView
        android:id="@+id/test_parallel_stream"
        android:layout_width="126dp"
        android:layout_height="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/test_parallel_stream_title"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/streams_flatmap_view"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginStart="17dp" />

    <Button
        android:id="@+id/test_parallel_stream_action"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/btn_action_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/test_parallel_stream"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        android:layout_marginEnd="14dp" />

</android.support.constraint.ConstraintLayout>
